syntax = "proto3";

package ai.lzy.v1.scheduler;

option java_outer_classname = "Scheduler";
option java_package = "ai.lzy.v1.scheduler";

message TaskStatus {
  string workflowId = 1;
  string taskId = 2;

  oneof status {
    Executing executing = 3;
    Success success = 4;
    Error error = 5;
  }

  message Executing {}

  message Success {
    int32 rc = 1;
    string description = 2;
  }

  message Error {
    int32 rc = 1;
    string description = 2;
  }

}
